--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+   <meta name=”description” content=”WiFi inhouse tracking hardware and advertising Platform. SaaS platform for Advertising and Marketing via Wi-Fi networks which integrate existing hotspots to single structure. We have beneficial user interface for our clients where they can manage  indoor and outdoor Wi-Fi broadcasting and/or tracking hardware of our network. ”>
+<link rel=”author” href=”https://plus.google.com/+OleksandrDzyuba”/>
+<meta property=”og:title” content=”Adtena tracking platform”/>
+<meta property=”og:description” content=”Marketing in Shopping malls thru the tracking in Wi-Fi”/>
+<meta name="Keywords" content="marketing, retail, wifi, mall, shop, track, analize, advertising ">
 
-    <title>New Age - Start Bootstrap Theme</title>
+
+    <title>Adtena Wi-Fi Tracking Marketing and Advertising</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -45,12 +49,18 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Adtena</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
+                   <li>
+                        <a class="page-scroll" href="http://adtena.com">Advertising</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="http://adtena.ca">Tracking</a>
+                    </li>
                     <li>
                         <a class="page-scroll" href="#download">Download</a>
                     </li>
@@ -73,7 +83,7 @@
                 <div class="col-sm-7">
                     <div class="header-content">
                         <div class="header-content-inner">
-                            <h1>New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything else!</h1>
+                            <h1>Adtena is WiFi inhouse tracking hardware and advertising Platform. </h1>
                             <a href="#download" class="btn btn-outline btn-xl page-scroll">Start Now for Free!</a>
                         </div>
                     </div>
@@ -101,12 +111,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h2 class="section-heading">Discover what all the buzz is about!</h2>
-                    <p>Our app is available on any mobile device! Download now to get started!</p>
-                    <div class="badges">
-                        <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
-                        <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
-                    </div>
+                    <h2 class="section-heading">We will keep you informed about US progress!</h2>
+                    <p></p>
+
                 </div>
             </div>
         </div>
@@ -118,7 +125,7 @@
                 <div class="col-lg-12 text-center">
                     <div class="section-heading">
                         <h2>Unlimited Features, Unlimited Fun</h2>
-                        <p class="text-muted">Check out what you can do with this app theme!</p>
+                        <p class="text-muted">It is pain for advertisers in finding all wi-fi network contacts in particular region, after that is tricky to manage wi-fi network specific requirements. Like contracts, payments and file formats.</p>
                         <hr>
                     </div>
                 </div>
@@ -156,6 +163,8 @@
                                 </div>
                             </div>
                         </div>
+                        
+<!--
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="feature-item">
@@ -172,6 +181,7 @@
                                 </div>
                             </div>
                         </div>
+                        -->
                     </div>
                 </div>
             </div>
@@ -191,14 +201,12 @@
         <div class="container">
             <h2>We <i class="fa fa-heart"></i> new friends!</h2>
             <ul class="list-inline list-social">
-                <li class="social-twitter">
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                </li>
+              
                 <li class="social-facebook">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/wifiadtena/"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li class="social-google-plus">
-                    <a href="#"><i class="fa fa-google-plus"></i></a>
+                    <a href="http://youtube.com/thedzyuba"><i class="fa fa-youtube"></i></a>
                 </li>
             </ul>
         </div>
@@ -206,7 +214,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2016 Start Bootstrap. All Rights Reserved.</p>
+            <p>&copy; 2017 <a href="http://rox.la">ROX.LA</a> team</p>
             <ul class="list-inline">
                 <li>
                     <a href="#">Privacy</a>
