--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Adtena</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Adtena</a><a class="navbar-brand page-scroll" href="http://adtena.ca">Canada</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                    <li>
-                        <a class="page-scroll" href="http://adtena.com">Advertising</a>
+                        <a class="page-scroll" href="http://adtena.com" target="blank">Advertising</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="http://adtena.ca">Tracking</a>
+                        <a class="page-scroll" href="http://adtena.ca" target="blank">Tracking</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#download">Download</a>
@@ -190,8 +190,8 @@
     <section class="cta">
         <div class="cta-content">
             <div class="container">
-                <h2>Stop waiting.<br>Start building.</h2>
-                <a href="#contact" class="btn btn-outline btn-xl page-scroll">Let's Get Started!</a>
+                <h2>Stop waiting.<br>Start Advertising.</h2>
+                <a href="http://cloud.adtena.com/auth/register/sign_up" class="btn btn-outline btn-xl page-scroll" target="blank">Let's Get Started!</a>
             </div>
         </div>
         <div class="overlay"></div>
